maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:7: error: ')' expected but ',' found.
  for (x <- 0 to Largeur-1,y <- 0 to Hauteur-1) {
                          ^ShortestPathMaze:17: error: illegal start of simple expression
}
^